package com.g64.controller.commands;

public interface Command {

    void execute();
}
