@startuml Command
skinparam linetype ortho

note "Command" as n1
note "Concrete commands" as n2
note "Receiver" as n3
note "Invoker" as n4
interface Command {
  execute()
}
class InteractDown{
  execute()
}

class GameController{
  processAction()
}

class GameState{
  processKey()
}

n1 .. Command
n2 .. InteractDown
n3 .. GameController
GameState o-- Command
GameState . n4
Command <|- InteractDown
GameController <-- InteractDown : receiver
@enduml
